# rest-demo

./: Cargo copy.toml  Cargo.toml  debug.env  xxxrest-demo-config.toml
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_init_data.down.sql  0002_init_data.up.sql
src/: db.rs  main.rs  roles.rs  server.rs  settings.rs
src/server/: user.rs
