[package]
name = "rest-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
config = "0.14.0"
fast_config = { path = "../fast_config", features = ["toml"] }
lazy_static = "1.5.0"
log = "0.4.22"
sensible-env-logger = "0.3.2"
serde = "1.0.210"
serde_json = "1.0.68"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
