[package]
name = "rest-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
const_format = "0.2.33"
fast_config = { path = "../fast_config", features = ["toml"] }
lazy_static = "1.5.0"
log = "0.4.22"
sensible-env-logger = "0.3.2"


auto-future = "1.0"
assert-json-diff = "2.0"
axum = { version = "0.7.7", features = [] }
anyhow = "1.0"
bytes = "1.7"
cookie = "0.18"
http = "1.1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
hyper = { version = "1.4", features = ["http1"] }
mime = "0.3"
rust-multipart-rfc7578_2 = "0.6"
reserve-port = "2.0"
serde = { version = "1.0" }
serde_json = "1.0"
serde_urlencoded = "0.7"
smallvec = "1.13"
tokio = { version = "1.40", features = ["rt", "time"] }
tower = { version = "0.5", features = ["util", "make"] }
url = "2.5"

[dev-dependencies]
axum-test = {version="16.2"}
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart", "tokio", "ws"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-routing", "query"] }
axum-msgpack = "0.4"
axum-yaml = "0.4"
futures-util = "0.3"
local-ip-address = "0.6"
regex = "1.10"
serde-email = { version = "3.1", features = ["serde"] }
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
tower-http = { version = "0.5", features = ["normalize-path"] }

rstest = "0.23.0"
