[package]
name = "rest-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
axum-test-helper = "0.4.0"
config = "0.14.0"
const_format = "0.2.33"
fast_config = { path = "../fast_config", features = ["toml"] }
lazy_static = "1.5.0"
log = "0.4.22"
sensible-env-logger = "0.3.2"
serde = "1.0.210"
serde_json = "1.0.68"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }

[dev-dependencies]
assert2 = "0.3.15"
axum-test-helper = { version = "0.4", features = ["withouttrace"] }
rstest = "0.23.0"
